@@ -13,6 +13,8 @@
   6. Don't allow a CGI::Carp error handler to die recursively. Print a warning and exit instead. 
      Thanks to Marc Chantreux. (RT#45956)
   7. The Dump() method now is fixed to escape HTML properly. Thanks to Mark Stosberg (RT#21341)
+  8. Support for <optgroup> with scrolling_list() now works the same way as it does for popup_menu().
+     Thanks to Stuart Johnston (RT#30097)
 
   [DOCUMENTATION]
   1. Several typos were fixed, Thanks to ambs. (RT#41105)
@@ -20,12 +22,14 @@
   3. examples/nph-clock.cgi is now more portable, by calling localtime() rather than `/bin/date`,
      thanks to Guenter Knauf. (RT#27456).
   4. In CGI::Carp, the SEE ALSO section was cleaned up, thanks to Slaven Rezic. (RT#32769)
+  5. The docs for redirect() were updated to reflect that most headers are
+     ignored during redirection. Thanks to Mark Stosberg (RT#44911)
 
   [INTERNALS]  
   1. New t/unescapeHTML.t test script has been added. It includes a TODO test for a pre-existing
      bug which could use a patch. Thanks to Pete Gamache and Mark Stosberg (RT#39122)
-  2. New test scripts have been added for user_agent(), popup_menu() and query_string(), and Dump()
-     Thanks to Mark Stosberg. (RT#37908, RT#43006, RT#21341)
+  2. New test scripts have been added for user_agent(), popup_menu() and query_string(), scrolling_list() and Dump()
+     Thanks to Mark Stosberg and Stuart Johnston. (RT#37908, RT#43006, RT#21341, RT#30097)
   3. CGI::Carp and CGI::Util have been updated to have non-developer version numbers. 
      Thanks to Slaven Rezic. (RT#48425)
   4. CGI::Switch and CGI::Apache now properly set their VERSION in their own name space.  
